BPMS-358 - add audit mode and violation store to script security